data/derived/comb/progs/unify/prog5690.ml.out
Characters 59-67:
  else [n % 10] :: digitsOfInt n / 10;;
       ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
